fix overflow issue in transaction title

--- a/extension/src/browser/Drawer/style.module.css
+++ b/extension/src/browser/Drawer/style.module.css
@@ -97,6 +97,12 @@
   word-wrap: break-word;
 }
 
+.contractName {
+  /** Important to not use auto width, because long contract names would make overflow the container */
+  width: 1px;
+  flex-grow: 1;
+}
+
 .inputType {
   padding-left: var(--spacing-1);
   opacity: 0.7;
